# pyFundamentus

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  command_line_interface.py  makefile  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  run_cmd.py  run_fastapi.py  run_rich.py
.github/workflows/: coveralls.yml  main.yml  pytest.yml
fundamentus/: __init__.py  _version.py
fundamentus/contracts/: extract_contract.py  information_contract.py  request_contract.py  transform_contract.py
fundamentus/contracts/mocks/: extract_contract.py  extract_contract_companies.py  extract_contract_property_funds.py
fundamentus/drivers/: html_collector.py  html_collector_test.py  http_requester.py  http_requester_test.py  random_user_agent.py  random_user_agent_test.py
fundamentus/drivers/interfaces/: html_collector.py  http_requester.py
fundamentus/drivers/mocks/: companies_list.py  html_collector.py  http_requester.py
fundamentus/exceptions/: extract_exception.py  http_request_error.py  transform_exception.py
fundamentus/interfaces/: textualize.py
fundamentus/main/: fundamentus_pipeline.py  fundamentus_pipeline_test.py
fundamentus/stages/: extractor_html_information_test.py
fundamentus/stages/extraction/: extractor_html_information.py  extractor_html_information_test.py
fundamentus/stages/transformation/: transform_raw_information.py  transform_raw_information_test.py
fundamentus/utilities/: config.py
fundamentus/utils/: indicator_names.py  random_user_agent.py
test/: __init__.py  textualize.py
