[project]
name = "pyfundamentus"
version = "0.0.5"
authors = [
  { name="Alexsander Lopes Camargos", email="alcamargos@vivaldi.net" },
]
description = "Python Fundamentus is a Python API that allows you to quickly access the main fundamental indicators of the main stocks in the Brazilian market."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha"
]

[project.urls]
"Homepage" = "https://github.com/alexcamargos/pyFundamentus"
"Bug Tracker" = "https://github.com/alexcamargos/pyFundamentus/issues"

[tool.setuptools]
packages = ["fundamentus"]
